VS: Add support for per-config C# sources

Fixes: #22108